Fixed header break issue, began fix on mobile work

--- a/assets/css/2-sections/_home-header.sass
+++ b/assets/css/2-sections/_home-header.sass
@@ -31,7 +31,7 @@
         letter-spacing: 5px
         margin-bottom: 40px
         
-        @media (max-width: 390px)
+        @media (max-width: 420px)
             font-size: 12px
             letter-spacing: 3px
         
