--- a/assets/css/2-sections/_home-work.sass
+++ b/assets/css/2-sections/_home-work.sass
@@ -22,6 +22,9 @@
         justify-content: center
         align-items: center
         
+        @media (max-width: 580px)
+            display: inline-block
+        
         .node
             background: $red-main
             width: 150px
@@ -30,6 +33,18 @@
             align-items: center
             justify-content: center
             display: flex
+            
+            @media (max-width: 580px)
+                display: block
+            
+            &:before 
+            
+                @media (max-width: 580px)
+                    content: ''
+                    display: inline-block
+                    height: 100%
+                    vertical-align: middle
+                    margin-right: -0.25em
             
             &:hover
                 cursor: pointer
@@ -73,6 +88,11 @@
                 padding: 0
                 margin: 0
                 
+                @media (max-width: 580px)
+                    display: inline-block
+                    vertical-align: middle
+                    margin-left: 4px
+        
         .top-nodes-wrap
             margin-bottom: -10px
             width: 100%
@@ -82,6 +102,10 @@
             z-index: 2
             position: relative
             transition: transform 300ms linear
+            
+            @media (max-width: 580px)
+                display: block
+                margin-bottom: 0
             
             &.retracted
                 transform: translateY(145px)
@@ -102,6 +126,9 @@
         .center-node
             margin: -15px 0 0
             z-index: 1
+            
+            @media (max-width: 580px)
+                margin-top: 0
     
         .face-node
             background: 
@@ -119,6 +146,9 @@
         
         .connector
             z-index: -1
+            
+            @media (max-width: 580px)
+                display: none
                 
         .top-connectors-wrap
             display: flex
